--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -264,7 +264,8 @@
                         android:layout_height="50dp"
                         android:layout_margin="3dp"
                         android:layout_weight="1"
-                        app:cardCornerRadius="100dp">
+                        app:cardCornerRadius="100dp"
+                        app:cardElevation="0.5dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -293,7 +294,8 @@
                         android:layout_height="50dp"
                         android:layout_margin="3dp"
                         android:layout_weight="1"
-                        app:cardCornerRadius="100dp">
+                        app:cardCornerRadius="100dp"
+                        app:cardElevation="0.5dp">
 
                         <TextView
                             android:layout_width="match_parent"
